examples/errors/Return404Example.raml
#%RAML 1.0 NamedExample
value: {
    "error": {
        "code": 404,
        "reason": "Not Found",
        "apiName": "commerce-cloud-sys-api",
        "correlationId": "2fdba910-8841-11ed-ab64-00d76d1c7fcd",
        "dateTime": "2022-12-30T09:55:08.101-03:00",
        "message": {
            "description": "HTTP PATCH on resource 'https://zzrb-101.sandbox.us03.dx.commercecloud.salesforce.com:443/s/Sites-Site/dw/data/v22_6/customer_lists/sfra_marketplace/customers/0000350' failed: not found (404)."
        }
    }
}